// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse color parse bgColor Snapshot 1`] = `
Object {
  "backgroundColor": "#fff",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse bgColor Snapshot 2`] = `
Object {
  "backgroundColor": "#fafafa",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse bgColor Snapshot 3`] = `
Object {
  "backgroundColor": "rgba(0, 0, 0, 0.12)",
  "color": "#fff",
}
`;

exports[`parse color parse bgColor Snapshot 4`] = `
Object {
  "backgroundColor": "#009688",
  "color": "#fff",
}
`;

exports[`parse color parse bgColor Snapshot 5`] = `
Object {
  "backgroundColor": "#4caf50",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse bgColor Snapshot 6`] = `
Object {
  "backgroundColor": "#ffeb3b",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse bgColor Snapshot 7`] = `
Object {
  "backgroundColor": "#f44336",
  "color": "#fff",
}
`;

exports[`parse color parse bgColor Snapshot 8`] = `
Object {
  "backgroundColor": "#f50057",
  "color": "#fff",
}
`;

exports[`parse color parse bgColor Snapshot 9`] = `
Object {
  "backgroundColor": "#f5f5f5",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse bgColor Snapshot 10`] = `
Object {
  "backgroundColor": "#eeeeee",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse bgColor Snapshot 11`] = `
Object {
  "backgroundColor": "#e0e0e0",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse bgColor Snapshot 12`] = `
Object {
  "backgroundColor": "#bdbdbd",
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse mkBorderColor Snapshot 1`] = `
Object {
  "backgroundColor": "rgba(0, 0, 0, 0.12)",
  "color": "#fff",
}
`;

exports[`parse color parse mkBorderColor Snapshot 2`] = `
Object {
  "borderColor": "#009688",
}
`;

exports[`parse color parse mkBorderColor Snapshot 3`] = `
Object {
  "borderColor": "#4caf50",
}
`;

exports[`parse color parse mkBorderColor Snapshot 4`] = `
Object {
  "borderColor": "#ffeb3b",
}
`;

exports[`parse color parse mkBorderColor Snapshot 5`] = `
Object {
  "borderColor": "#f44336",
}
`;

exports[`parse color parse mkBorderColor Snapshot 6`] = `
Object {
  "borderColor": "#f50057",
}
`;

exports[`parse color parse mkBorderColor Snapshot 7`] = `
Object {
  "borderColor": "#f5f5f5",
}
`;

exports[`parse color parse mkBorderColor Snapshot 8`] = `
Object {
  "borderColor": "#eeeeee",
}
`;

exports[`parse color parse mkBorderColor Snapshot 9`] = `
Object {
  "borderColor": "#e0e0e0",
}
`;

exports[`parse color parse mkBorderColor Snapshot 10`] = `
Object {
  "borderColor": "#bdbdbd",
}
`;

exports[`parse color parse mkBorderColor Snapshot 11`] = `
Object {
  "borderColor": "rgba(0, 0, 0, 0.38)",
}
`;

exports[`parse color parse mkTextColor Snapshot 1`] = `
Object {
  "color": "#009688",
}
`;

exports[`parse color parse mkTextColor Snapshot 2`] = `
Object {
  "color": "#4caf50",
}
`;

exports[`parse color parse mkTextColor Snapshot 3`] = `
Object {
  "color": "#ffeb3b",
}
`;

exports[`parse color parse mkTextColor Snapshot 4`] = `
Object {
  "color": "#f44336",
}
`;

exports[`parse color parse mkTextColor Snapshot 5`] = `
Object {
  "color": "#f50057",
}
`;

exports[`parse color parse mkTextColor Snapshot 6`] = `
Object {
  "color": "rgba(0, 0, 0, 0.12)",
}
`;

exports[`parse color parse mkTextColor Snapshot 7`] = `
Object {
  "color": "rgba(0, 0, 0, 0.87)",
}
`;

exports[`parse color parse mkTextColor Snapshot 8`] = `
Object {
  "color": "rgba(0, 0, 0, 0.54)",
}
`;

exports[`parse color parse mkTextColor Snapshot 9`] = `
Object {
  "color": "rgba(0, 0, 0, 0.38)",
}
`;
